Updated to latest TallyConnector

--- a/2.Masters/2.1 Accounting Masters/2.1.1 Currency.ipynb
+++ b/2.Masters/2.1 Accounting Masters/2.1.1 Currency.ipynb
@@ -11,23 +11,7 @@
     }
    },
    "source": [
-    "# ***TallyConnector - Getting Started***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "TallyConnector is a library written in C#, Which is abstraction for Tally XML API\n",
-    "\n",
-    "Using TallyConnector, we no need to worry about creating xmls and parsing XMLS, We only deal with C# objects"
+    "### (CRUD)Create, Read, Update and Delete Currency"
    ]
   },
   {
@@ -61,20 +45,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "***Importing Namespaces***"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -87,8 +57,8 @@
    },
    "outputs": [],
    "source": [
-    "using System;\n",
     "using TallyConnector.Core.Models;\n",
+    "using TallyConnector.Core.Models.Masters;\n",
     "using TallyConnector.Services;"
    ]
   },
@@ -133,7 +103,7 @@
     }
    },
    "source": [
-    "***Intiate New Instance of Tally Object with Custom Host and Port***"
+    "***Creating Currency Object***"
    ]
   },
   {
@@ -149,34 +119,9 @@
    },
    "outputs": [],
    "source": [
-    "TallyService tally = new(\"http://localhost\",9000);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   },
-   "source": [
-    "***Configure***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "tally.Setup(\"http://localhost\",9000);"
+    "Currency currency = new(\"$$\",\"USD\");\n",
+    "currency.DecimalPlaces = 2;\n",
+    "currency.InMilllions = true;"
    ]
   },
   {
@@ -190,7 +135,7 @@
     }
    },
    "source": [
-    "***Check Tally is running at given Host and Port***"
+    "***Sending Currency To Tally***"
    ]
   },
   {
@@ -206,7 +151,7 @@
    },
    "outputs": [],
    "source": [
-    "await tally.CheckAsync();"
+    "var Response = await tally.PostCurrencyAsync<Currency>(currency);"
    ]
   },
   {
@@ -220,7 +165,7 @@
     }
    },
    "source": [
-    "***Get License Information from Tally***"
+    "***Checking Response***"
    ]
   },
   {
@@ -236,8 +181,7 @@
    },
    "outputs": [],
    "source": [
-    "var LicesneData = await tally.GetLicenseInfoAsync();\n",
-    "LicesneData"
+    "Response"
    ]
   },
   {
@@ -251,7 +195,7 @@
     }
    },
    "source": [
-    "***Get Name of Active Company in Tally***"
+    "***Getting Currency from Tally***"
    ]
   },
   {
@@ -267,7 +211,8 @@
    },
    "outputs": [],
    "source": [
-    "await tally.GetActiveCompanyAsync()"
+    "var tally_currency = await tally.GetCurrencyAsync<Currency>(\"$$\");\n",
+    "tally_currency"
    ]
   },
   {
@@ -281,7 +226,7 @@
     }
    },
    "source": [
-    "***Get List of Companies opened in Tally***"
+    "***Altering Currency***"
    ]
   },
   {
@@ -297,70 +242,10 @@
    },
    "outputs": [],
    "source": [
-    "await tally.GetCompaniesAsync<Company>()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "***Get List of Companies in Tally Default Data Path***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "scrolled": true,
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "await tally.GetCompaniesinDefaultPathAsync()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "## ***Configuring Tally Instance***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "By Default Data will be fetched from Active company in Tally for Active Period\n",
-    "\n",
-    "If We want data from Specific company First we need to set `Company` Property by clalling `ChangeCompany` method\n",
-    "\n",
-    "`ChangeCompany` also accepts fromdate and todate as paramteres"
+    "tally_currency.FormalName = \"NUSD\";\n",
+    "tally_currency.InMilllions = false;\n",
+    "tally_currency.HasSpace = true;\n",
+    "var AlterResp = await tally.PostCurrencyAsync(tally_currency);"
    ]
   },
   {
@@ -376,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "tally.SetCompany(new(){Name=\"ABC Company Ltd\"});"
+    "AlterResp"
    ]
   },
   {
@@ -390,7 +275,7 @@
     }
    },
    "source": [
-    "`GetMasterStatistics` method will Fetch the Master Statistics report at Display --> Statement of Accounts --> Statistics"
+    "***Deleting Currency***"
    ]
   },
   {
@@ -406,23 +291,8 @@
    },
    "outputs": [],
    "source": [
-    "var MasterStatistics = await tally.GetMasterStatisticsAsync();\n",
-    "MasterStatistics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "`GetVoucherStatistics` method will Fetch the Master Statistics report at Display --> Statement of Accounts --> Statistics\n",
-    "accepts companyname , fromdate and todate as paramteres"
+    "tally_currency.Action = Action.Delete;\n",
+    "var DelResp = await tally.PostCurrencyAsync(tally_currency);"
    ]
   },
   {
@@ -438,47 +308,7 @@
    },
    "outputs": [],
    "source": [
-    "var VoucherStatistics = await tally.GetVoucherStatisticsAsync(new()\n",
-    "                                                            {\n",
-    "                                                                FromDate= new DateTime(2010,04,01),\n",
-    "                                                                ToDate= new DateTime(2021,03,31)\n",
-    "                                                            });\n",
-    "VoucherStatistics.Where(c=>c.Count>0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "Printing Count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "int MastersCount = 0;\n",
-    "int VouchersCount =0;\n",
-    "MasterStatistics.ForEach(c=>MastersCount += c.Count);\n",
-    "VoucherStatistics.ForEach(c=>VouchersCount += c.Count);\n",
-    "Console.Write($\"Total Masters Count  - {MastersCount}\\n\");\n",
-    "Console.Write($\"Total Vouchers Count - {VouchersCount}\");"
+    "DelResp"
    ]
   }
  ],
@@ -518,13 +348,6 @@
       "name": "html"
      },
      {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
       "aliases": [],
       "languageName": "KQL",
       "name": "kql"
@@ -555,10 +378,6 @@
        "frontend"
       ],
       "name": "vscode"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
      }
     ]
    }
