--- a/2.Masters/2.1 Accounting Masters/2.1.1 Currency.ipynb
+++ b/2.Masters/2.1 Accounting Masters/2.1.1 Currency.ipynb
@@ -151,7 +151,7 @@
    },
    "outputs": [],
    "source": [
-    "var Response = await tally.PostCurrencyAsync<Currency>(currency);"
+    "var Response = await tally.PostCurrencyAsync(currency);"
    ]
   },
   {
@@ -211,7 +211,7 @@
    },
    "outputs": [],
    "source": [
-    "var tally_currency = await tally.GetCurrencyAsync<Currency>(\"$$\");\n",
+    "var tally_currency = await tally.GetCurrencyAsync(\"$$\");\n",
     "tally_currency"
    ]
   },
@@ -242,6 +242,7 @@
    },
    "outputs": [],
    "source": [
+    "tally_currency.OldName = tally_currency.Name;\n",
     "tally_currency.FormalName = \"NUSD\";\n",
     "tally_currency.InMilllions = false;\n",
     "tally_currency.HasSpace = true;\n",
@@ -309,6 +310,42 @@
    "outputs": [],
    "source": [
     "DelResp"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Getting All Currencies "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using TallyConnector.Core.Extensions;\n",
+    "var c = await tally.GetCurrenciesAsync();\n",
+    "c.ToJson()"
    ]
   }
  ],
@@ -378,6 +415,17 @@
        "frontend"
       ],
       "name": "vscode"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
